# a_simple_api_rust

./: Cargo.toml  docker-compose.yaml
migrations/: 0001_todos.up.sql
src/: api.rs  main.rs  routes.rs  todo.rs
