[package]
name = "api-rust-todo-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "macros",
] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
